# Observal

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  REUSE.toml  codecov.yml  install-server.sh  license-policy.yml  pnpm-lock.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report_form.yml
.github/workflows/: ci.yml  take-command.yml
docker/: Dockerfile.web  docker-compose.yml
docs/cli/: README.md  migrate.md  support.md
ee/observal_insights/: metrics.py  session_cache.py
observal-server/: logging_config.py  main.py
observal-server/alembic/versions/: 0005_add_insight_tables.py
observal-server/api/routes/: agent.py  agent_versions.py  preview.py  sessions.py  support.py
observal-server/models/: insight_meta_cache.py
observal-server/services/: agent_snapshot.py  clickhouse.py  log_buffer.py
observal-server/tests/: test_agent_versions_api.py
observal_cli/: cmd_agent.py  cmd_migrate.py  cmd_pull.py  cmd_support.py  main.py  model_catalog.py  render.py
observal_cli/hooks/: session_push.py
observal_cli/support/: __init__.py  collectors.py  manifest.py  redaction.py
scripts/: check_vulnerabilities.py
tests/: test_agent_snapshot.py  test_clickhouse_phase1.py  test_cmd_support.py  test_draft_workflow.py  test_migrate.py  test_migrate_telemetry.py  test_model_display.py  test_preview_config.py  test_support_bundle_wiring.py  test_support_collectors.py  test_support_endpoint.py  test_support_inspect.py  test_support_integration.py  test_support_manifest.py  test_support_pbt.py  test_support_redaction.py
web/src/app/(user)/traces/: page.tsx
web/src/components/builder/: preview-panel.tsx
web/src/components/review/: review-diff-sheet.tsx
web/src/lib/: api.ts  model-display.ts  types.ts
