# SPDX-FileCopyrightText: 2026 Apoorv Garg <apoorvgarg.21@gmail.com>
# SPDX-FileCopyrightText: 2026 Subramania Raja <dhanpraja231@gmail.com>
# SPDX-FileCopyrightText: 2026 Harishankar <harishankar0301@gmail.com>
# SPDX-FileCopyrightText: 2026 Hari Srinivasan <harisrini21@gmail.com>
# SPDX-FileCopyrightText: 2026 Naraen Rammoorthi <naraen13@gmail.com>
# SPDX-FileCopyrightText: 2026 Santhosh Raja <santhoshpkraja2004@gmail.com>
# SPDX-FileCopyrightText: 2026 Shaan Narendran <shaannaren06@gmail.com>
# SPDX-FileCopyrightText: 2026 Vishnu Muthiah <vishnu.muthiah04@gmail.com>
# SPDX-License-Identifier: AGPL-3.0-only

[project]
name = "observal-cli"
version = "0.4.0"
description = "Observal MCP Server Registry & Agent Registry CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"

dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.3",
    "questionary>=2.0.0",
    "docker>=7.0.0",
    "asyncpg>=0.29.0",
    "hypothesis",
    "pyarrow",
]


keywords = ["mcp", "model-context-protocol", "registry", "cli", "agents", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/BlazeUp-AI/Observal"
Repository = "https://github.com/BlazeUp-AI/Observal"
Changelog = "https://github.com/BlazeUp-AI/Observal/blob/main/CHANGELOG.md"
Issues = "https://github.com/BlazeUp-AI/Observal/issues"

[project.scripts]
observal = "observal_cli.main:app"
observal-shim = "observal_cli.shim:main"
observal-proxy = "observal_cli.proxy:main"
observal-sandbox-run = "observal_cli.sandbox_runner:main"
#observal-graphrag-proxy = "observal_cli.graphrag_proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["observal_cli"]

# ── Ruff ─────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["observal_cli", "observal-server", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
    "TID",   # flake8-tidy-imports (import boundary enforcement)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (typer needs this)
    "UP007",  # use X | Y for union (keep Optional for typer compat)
    "N805",   # first argument of a method should be named self (pydantic validators)
    "B904",   # raise from in except (too noisy for HTTPException patterns)
    "SIM105", # contextlib.suppress (explicit try/except is clearer for us)
    "UP042",  # str enum inheritance (needed for SQLAlchemy compatibility)
    "RUF012", # mutable class defaults (pydantic/sqlalchemy models)
]

[tool.ruff.lint.isort]
known-first-party = ["observal_cli", "models", "schemas", "services", "api", "ee"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"ee".msg = "Core must not import from ee/. Only main.py may cross this boundary."

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "RUF059", "B007", "TID251"]  # unused vars, allow ee imports in tests
"ee/*" = ["TID251"]                                     # ee/ may import from itself
"ee/observal_insights/*" = ["TID251", "N806", "SIM108", "B905", "F841", "TCH003"]  # ported code, preserve original style
"observal_cli/main.py" = ["E402"]       # imports after app = typer.Typer()
"observal-server/main.py" = ["TID251"]  # main.py is the single allowed ee/ crossing point
"observal-server/services/insights/__init__.py" = ["TID251"]  # insights loader imports from ee/
"demo/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pytest ───────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# ── Coverage ────────────────────────────────────────────

[tool.coverage.run]
source = ["observal_cli", "observal-server"]
omit = ["tests/*", "ee/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

# ── Bandit ───────────────────────────────────────────────

[tool.bandit]
exclude_dirs = ["tests", "alembic", ".venv", "node_modules"]
skips = [
    "B101",  # assert used in tests
    "B104",  # 0.0.0.0 in string comparisons, not actual binds
    "B310",  # urllib.request.urlopen with known server URLs from config
    "B608",  # ClickHouse {param:Type} and SQLite ? placeholders are parameterized, not injectable
]

[dependency-groups]
dev = [
    "fastapi>=0.135.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "ruff==0.15.12",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0",
]
